force-app/main/default/objects/Regulatory_Log__c/Regulatory_Log__c.object-meta.xml
<CustomObject>
    <label>Regulatory Log</label>
    <nameField>
        <label>Regulatory Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulatory Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>