force-app/main/default/objects/Regulatory_Log__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <color>#33CC00</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FF9900</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>