force-app/main/default/objects/Regulatory_Log__c/fields/Impact_Rating_Display__c.field-meta.xml
<CustomField>
    <fullName>Impact_Rating_Display__c</fullName>
    <description>Displays the colour associated with the given impact rating.</description>
    <formula>IF( ISBLANK( TEXT(Impact__c) ) , IMAGE(&quot;/apex/grc__RatingDisplay&quot;, &#39;&#39; , 25, 80) , IMAGE(&quot;/apex/grc__RatingDisplay?colour=%23&quot; + IF( ISPICKVAL( Impact__c, &#39;Low&#39; ), &#39;33CC00&#39; , IF(ISPICKVAL( Impact__c, &#39;Medium&#39; ), &#39;FF9900&#39; , IF(ISPICKVAL( Impact__c, &#39;High&#39; ) , &#39;FF0000&#39;, &#39;&#39;) ) ) , TEXT(Impact__c) , 25, 80) )</formula>
    <label>Impact Rating</label>
    <type>Text</type>
</CustomField>