force-app/main/default/objects/Regulatory_Log__c/fields/Source_Material__c.field-meta.xml
<CustomField>
    <fullName>Source_Material__c</fullName>
    <label>Source Material</label>
    <length>64000</length>
    <type>Html</type>
</CustomField>