force-app/main/default/objects/Regulatory_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Publication_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Impact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>